<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.main.MainActivity">

    <TextView
        android:id="@+id/letus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letus"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="32dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/concern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concern"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/letus"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ExtraText">

        <View
            android:id="@+id/viewBar"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background2"/>

        <TextView
            android:id="@+id/article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/viewBar"/>

        
        //imagegallery
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            >

            <View
                android:layout_width="300dp"
                android:layout_height="100dp" />

            //image
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/background3"
                        android:src="@drawable/cam1" />
                </RelativeLayout>

            //gallery
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/background3"
                    android:src="@drawable/gal1" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>